--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "themes:generate": "ts-node --project ./scripts/cli/tsconfig.json ./scripts/cli/generateSassVariableFiles.ts",
     "typecheck": "tsc --noEmit && yarn run packages:typecheck",
     "plugins:build-bundled": "grafana-toolkit plugin:bundle-managed",
+    "monaco:copy": "cp -r ./node_modules/monaco-editor/min/vs ./public/build/monaco",
     "watch": "yarn start -d watch,start core:start --watchTheme",
     "ci:test-frontend": "yarn run prettier:check && yarn run typecheck && yarn run lint && yarn run test:ci && yarn grafana-toolkit node-version-check && ./scripts/ci-check-strict.sh"
   },
@@ -171,8 +172,6 @@
     "mini-css-extract-plugin": "0.9.0",
     "mocha": "7.0.1",
     "module-alias": "2.2.2",
-    "monaco-editor": "0.20.0",
-    "monaco-editor-webpack-plugin": "1.9.0",
     "mutationobserver-shim": "0.3.3",
     "ngtemplate-loader": "2.0.1",
     "optimize-css-assets-webpack-plugin": "5.0.4",
@@ -213,6 +212,7 @@
     "@emotion/react": "11.1.5",
     "@grafana/aws-sdk": "0.0.3",
     "@grafana/slate-react": "0.22.9-grafana",
+    "@kusto/monaco-kusto": "^3.2.6",
     "@leeoniya/react-inlinesvg": "2.2.4",
     "@popperjs/core": "2.5.4",
     "@reduxjs/toolkit": "1.5.0",
